[package]
name = "rub-login"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
once_cell = "1.16.0"
reqwest = { version = "0.11.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
